[tool.poetry]
name = "production_dbt"
version = "0.1.0"
description = ""
authors = ["gavinBeam <gavin.tynan@beamery.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
dbt-bigquery = "^1.2.0"
sqlfluff-templater-dbt = "^1.3.1"
google-auth = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
